src/main/resources/yaml/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-java-vs
spec:
  hosts:
    - "*"
  gateways:
    - test-gateway
  http:
    - match:
        - uri:            
            prefix: /bs/v1/propagation
          #headers:
          #  version:
          #    exact: v1
      #rewrite:
      #  uri: /
      route:
        - destination:
            host: bs-hello-java
            port:
              number: 8080
            subset: app-v1
          weight: 90
        - destination:
            host: bs-hello-java
            port:
              number: 8080
            subset: app-v2
          weight: 10
      
      #mirror:
      #  host: bs-hello-java
      #  port:
      #    number: 8080
      #  subset: app-v2
      #mirror_percent: 100

      #fault:
      #  abort:
      #    httpStatus: 500
      #    percentage:
      #      value: 50
      #  delay:
      #    fixedDelay: 1s
      #    percentage:
      #      value: 50

      # retries:
      #  attempts: 1
      #  perTryTimeout: 1s
      #  retryOn: 5xx,retriable-4xx
